# cloud-game-starter

./: .gitignore  LICENSE  Makefile  README.ko.md  README.md  README.us.md  main.tf  pyproject.toml
cgs-cli/: main.py  messages.py
cgs-tester/: CMakeLists.txt  CMakeSettings.json  main.cpp
cgs_cli/: main.py  messages.py
cgs_cli/terraform/: ecr.tf  ecs.tf  main.tf
samples/csharp-echo/: Program.cs  csharp-echo.csproj
samples/go-echo/: go.mod  main.go
templates/docker/: Dockerfile.go.tpl
