# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cgs-cli"
version = "0.3.0"
authors = [
    { name="rosmontisu", email="rosmontisu@gmail.com" },
]
description = "A CLI tool to deploy your game server to the cloud with a single command."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License", # -> license
    "Operating System :: OS Independent",
]
# CLI 툴이 의존하는 라이브러리 목록
dependencies = [
    "typer[all]",
]

[project.urls]
"Homepage" = "https://github.com/rosmontisu/cloud-game-starter"
"Bug Tracker" = "https://github.com/rosmontisu/cloud-game-starter/issues"

# 실제 사용자가 터미널에 입력하는 부분
[project.scripts]
cgs = "cgs_cli.main:app"


[tool.setuptools]
packages = ["cgs_cli"]

[tool.setuptools.package-data]
cgs_cli = ["terraform/**/*"] # 모든 terraform하위의 모든 폴더(**)/파일(*) 포함